# server

./: .golangci.yaml  .pre-commit-config.yaml  go.mod  pyproject.toml  readme.md
.github/workflows/: build.yaml  ci.yaml  lint.yaml  release.yaml  test.yaml
domain/: revision.go
mocks/: RevisionRepo.go
model/: revision.go
pol/: config.py
pol/db/: sa.py  tables.py
revision/: mysql_repository.go
scripts/: public_archive.py
web/handler/: revision.go  revision_test.go
web/res/: json.go
