[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pol"
version = "0.8.0"
description = ""
# sort by PR date
authors = [
  'Trim21 <trim21.me@gmail.com>',
  'Sociosarbis <136657577@qq.com>',
  'MoguCloud <mogucloud@gmail.com>',
  'MTC <MichaelMai2000@users.noreply.github.com>',
  'JarvieK <3547456+Jarvie8176@users.noreply.github.com>',
  'AspectLeft <aspectleft@gmail.com>',
]

[tool.poetry.dependencies]
python = "3.8.*"
# dependencies
pytz = "2021.3"
orjson = "==3.6.7"
loguru = "==0.6.0"
SQLAlchemy = { extras = ["mypy", "pymysql"], version = "==1.4.31" }

[tool.poetry.dev-dependencies]
# tests
coverage = { version = "==6.3.1", extras = ["toml"] }
# linter and formatter
pre-commit = "==2.17.0"
black = "22.1.0"
flake8 = '4.0.1'
flake8-comprehensions = "3.8.0"
flake8-bugbear = "22.1.11"
flake8-broken-line = "0.4.0"
flake8-pytest-style = "1.6.0"
flake8-tidy-imports = "4.6.0"
mypy = "0.931"
requests = "2.27.1"

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":',
  'raise NotImplementedError'
]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true
plugins = ['sqlalchemy.ext.mypy.plugin', 'pydantic.mypy']

[tool.black]
target_version = ['py38']
